Reorganize project structure with test and docs directories
- Move all test files to test/ directory:
  * test_iou3d.cpp -> test/test_iou3d.cpp
  * rotation_test.cpp -> test/rotation_test.cpp
  * vertex_order_test.cpp -> test/vertex_order_test.cpp

- Create docs/ directory and move documentation:
  * algorithm_explanation.md -> docs/algorithm_explanation.md

- Update CMakeLists.txt:
  * Adjust test file paths in CMake configuration
  * Add vertex_order_test as a new test target
  * Update test properties and dependencies

- Update README.md:
  * Reflect new project structure in file tree
  * Add documentation for vertex_order_test
  * Update test running instructions

- Update .gitignore to include vertex_order_test executable

Benefits:
- Better project organization and separation of concerns
- Cleaner root directory with logical subdirectories
- Easier navigation for developers and maintainers
- Comprehensive test coverage with algorithm validation

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ test_iou3d
 simple_example
 advanced_example
 rotation_test
+vertex_order_test
 
 # CMake cache and generated files
 CMakeCache.txt
